# chess-support-mcp

./: README.md  pyproject.toml
src/chess_support_mcp/: server.py
tests/: test_chess_support_mcp.py
